--- a/Assets/style.css
+++ b/Assets/style.css
@@ -24,7 +24,7 @@ header h1{
     font-size: 47px;
     color: #111;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: larger;
+    font-size: 40px;
 }
 header nav{
     padding-top: 15px;
@@ -66,62 +66,113 @@ header nav ul li{
     align-items: flex-start ;
     justify-content: space-around;
 }
+.info-about-me h3{
+    padding: 0px 20px;
+}
+
 .vertical-line1 {
     height: 100px;
     border-left: 2px solid black
 }
 .work{
     display: flex;
-    align-items: flex-start;
+    margin: 20px;
+
+    /* align-items: flex-start; */
     /* justify-content: space-around; */
 }
-.vertical-line2 {
-    display: flex;
-    height: 500px;
-    border-left: 2px solid black
+.work h2{
+    padding: 0px 20px;
 }
 
 .background-images{
-display: flex;
-}
-#MernStack {
-    display: inline;
+/* display: flex;
+flex-wrap: wrap; */
+margin: 20px;
 }
 
+.top-image{
+
+}
 #MernStack {
     display: block;
-    /* padding-left: 10px; */
     background-image: url(./images/mern-stack.webp);
+    height: 300px;
+    width: 100%;
+    /* margin: left; */
+}
 
-    height: 200px;
-    width: 700px;
-    margin: left;
+h4 {
+    /* display: flex;  */
+    text-align: right;
+    background-color: aqua;
+    color: darkblue;
+    padding: 5px;  
+}
+.bottom-image{
+    display: flex;
+    flex-wrap: wrap;
 }
 #led-wall{
     display:block;
     background-image: url(./images/LED-wall.webp);
-    height: 100px;
-    width: 100px;
-    margin: left;
+    height: 150px;
+    width: 45%;
+    /* margin: left; */
 }
 #calculator{
     display: block;
     background-image: url(./images/Calculator.jpg);
-    height: 100px;
-    width: 100px;
-    margin: left;
+    height: 150px;
+    width: 45%;
+    /* margin: left; */
 }
 #pastel{
     display: block;
     background-image: url(./images/Pastel-Pazzle.jpg);
-    height: 200px;
-    width: 700px;
-    margin: left;
+    height: 150px;
+    width: 45%;
+    /* margin: left; */
 }   
 #run-buddy{
   display: block;
   background-image: url(./images/run-body.jpg);
-  height: 200px;
-  width: 700px;
-  margin: left;
+  height: 150px;
+  width: 45%;
+  /* margin: left; */
+}
+footer{
+    padding: 20px;
+    display:block;
+    width: 100%;
+    height: 110px;
+    background-color: aqua;
+}
+footer h2{
+    display: inline-block;
+    font-size: 47px;
+    color: #111;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 40px;
+}
+footer nav{
+    padding-top: 15px;
+    margin-right: 20px;
+    float: right;
+    font-family:'Times New Roman', Times, serif;
+    font-size: 20px;
+    
+}
+
+footer nav ul {
+   list-style-type: none; 
+}
+
+footer nav ul li{
+    font-family:Arial, Helvetica, sans-serif;
+    display: inline-block;
+    margin-left: 25px;
+}
+.end{
+    text-align: center;
 }
